fix overflow dashboard

--- a/frontend/src/components/Dashboard/Dashboard.css
+++ b/frontend/src/components/Dashboard/Dashboard.css
@@ -4,6 +4,7 @@
     z-index: 1;
     height: 100vh;
     width: 100%;
+    overflow-x: hidden;
     overflow-y: auto;
 }
 
